added moment, javascript, and jquery

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -19,6 +19,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    ></script>
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,10 +38,12 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <section id="timeBlock"></section>
+      <section id="timeBlock">it me</section>
       <!-- Timeblocks go here -->
     </div>
-
+    <script src="./moment.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./javascript.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
