fixed jQuery issues

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -20,11 +21,6 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
     ></script>
@@ -38,7 +34,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <section id="timeBlock">it me</section>
+      <section id="timeBlock"></section>
       <!-- Timeblocks go here -->
     </div>
     <script src="./moment.js"></script>
